--- a/dashboard/app/views/quick_launch/_fasse_button.html.erb
+++ b/dashboard/app/views/quick_launch/_fasse_button.html.erb
@@ -1,6 +1,6 @@
 <div class="<%= button_column_classes %>">
   <div id="fasse-button" class="launch-button link-button">
-    <a href="#">
+    <a href="#" target="_blank">
       <div class="title text-center">fas se</div>
       <div class="link-button-text">
         Connect to FAS SE to work with Level 3 data
