--- a/dashboard/app/views/quick_launch/_launch_button.html.erb
+++ b/dashboard/app/views/quick_launch/_launch_button.html.erb
@@ -2,7 +2,7 @@
   <div id="<%= launchButtonId %>"
        data-toggle="launch-button"
        data-url="<%= ws_sessions_path %>"
-       data-reload-url="<%= batch_connect_sessions_path(r: root_url, format: :js) %>"
+       data-reload-url="<%= launchers_sessions_path(r: root_url, format: :js) %>"
        class="launch-button">
     <div class="launch-button-spinner" style="display: none;">
       <div class="spinner-border" role="status"></div>
