--- a/dashboard/app/views/quick_launch/index.html.erb
+++ b/dashboard/app/views/quick_launch/index.html.erb
@@ -10,40 +10,54 @@
   <div id="launch-button-error" class="alert alert-danger" role="alert" style="display: none;">
     There was an error submitting your job to the cluster
   </div>
-  <div class="alert alert-info" role="alert">
-    Welcome to the Social Sciences dashboard of the Cannon Cluster
-  </div>
-  <div>
-    <div id="sessions-container" class="batch-connect sessions" data-toggle="poll" data-url="<%= batch_connect_sessions_path(r: root_url, format: :js) %>" data-delay="<%= ENV["POLL_DELAY"] || 10000 %>">
-      <%= render partial: "batch_connect/sessions/panel", collection: @sessions.first(quick_launch_max_sessions), as: :session %>
-    </div>
+  <div class="alert alert-info app-launcher-title" role="alert">
+    Welcome to the Social Sciences dashboard of the FAS Cannon Cluster
   </div>
 
-  <div id="<%= view_interactive_sessions_link_container_id %>" style="<%= show_more_sessions_link?(@sessions.length) ? "" : "display:none" %>">
+  <div data-selector="no-active-sessions" class="ood-appkit markdown app-launcher-help" style="<%= has_active_sessions?(@sessions) ? "display:none" : "" %>">
+    <p>To start an interactive session with a default set of resources, click an app icon below.</p>
+    <p>If you need different resources than those listed, <a href="<%= sys_url(batch_connect_sessions_path) %>">create a customized session</a> using the Interactive Apps menu</p>
+  </div>
+
+  <div data-selector="active-sessions" class="quick-launch-buttons-title" style="<%= has_active_sessions?(@sessions) ? "" : "display:none" %>">
+    <h3>Active interactive sessions</h3>
+    <a data-selector="more-sessions" href="<%= sys_url(batch_connect_sessions_path) %>" style="<%= show_more_sessions_link?(@sessions) ? "" : "display:none" %>">
+      view all my Interactive sessions
+    </a>
+  </div>
+
+  <div id="sessions-container" class="batch-connect sessions" data-toggle="poll" data-url="<%= launchers_sessions_path(r: root_url, format: :js) %>" data-delay="<%= ENV["POLL_DELAY"] || 10000 %>">
+    <%= render partial: "batch_connect/sessions/panel", collection: @sessions.first(quick_launch_max_sessions), as: :session %>
+  </div>
+
+  <div data-selector="more-sessions" style="<%= show_more_sessions_link?(@sessions) ? "" : "display:none" %>">
     <a href="<%= sys_url(batch_connect_sessions_path) %>" role="button">
       <i class="fas fa-window-restore" aria-hidden="true"></i>
-      <span>View all my Interactive sessions <%= number_of_sessions_text(@sessions.length) %></span>
+      <span>View all my Interactive sessions <span data-selector="number-of-sessions">(<%= @sessions.length %>)</span></span>
     </a>
   </div>
 
   <div class="quick-launch-buttons-container">
-    <h3>Interactive Apps</h3>
-  </div>
-  <div class="row row-eq-height">
-    <%= render partial: "launch_button", locals: { launchButtonId: "rstudio", launchButton: @launchButtons[:rstudio][:view] } if @launchButtons[:rstudio][:cluster] %>
-    <%= render partial: "launch_button", locals: { launchButtonId: "rdesktop", launchButton: @launchButtons[:rdesktop][:view] } if @launchButtons[:rdesktop][:cluster] %>
-    <%= render partial: "launch_button", locals: { launchButtonId: "jupiterlab", launchButton: @launchButtons[:jupiterlab][:view] } if @launchButtons[:jupiterlab][:cluster] %>
-    <%= render partial: "launch_button", locals: { launchButtonId: "stata", launchButton: @launchButtons[:stata][:view] } if @launchButtons[:stata][:cluster] %>
-    <%= render partial: "launch_button", locals: { launchButtonId: "sas", launchButton: @launchButtons[:sas][:view] } if @launchButtons[:sas][:cluster] %>
-  </div>
+    <div class="quick-launch-buttons-title">
+      <h3>Start an interactive app</h3>
+      <a href="<%= sys_url(batch_connect_sessions_path) %>">view all interactive app options</a>
+    </div>
+    <div class="row row-eq-height">
+      <%= render partial: "launch_button", locals: { launchButtonId: "rstudio", launchButton: @launchButtons[:rstudio][:view] } if @launchButtons[:rstudio][:cluster] %>
+      <%= render partial: "launch_button", locals: { launchButtonId: "rdesktop", launchButton: @launchButtons[:rdesktop][:view] } if @launchButtons[:rdesktop][:cluster] %>
+      <%= render partial: "launch_button", locals: { launchButtonId: "jupiterlab", launchButton: @launchButtons[:jupiterlab][:view] } if @launchButtons[:jupiterlab][:cluster] %>
+      <%= render partial: "launch_button", locals: { launchButtonId: "stata", launchButton: @launchButtons[:stata][:view] } if @launchButtons[:stata][:cluster] %>
+      <%= render partial: "launch_button", locals: { launchButtonId: "sas", launchButton: @launchButtons[:sas][:view] } if @launchButtons[:sas][:cluster] %>
+    </div>
 
-  <div class="quick-launch-buttons-container">
-    <h3>Quick Links</h3>
-  </div>
-  <div class="row row-eq-height">
-    <%= render partial: "link_button", locals: { launchButtonId: "terminal", launchButton: @launchButtons[:terminal][:view] } if @launchButtons[:terminal][:view][:url] %>
+    <div class="quick-launch-buttons-title">
+      <h3>Quick links</h3>
+    </div>
+    <div class="row row-eq-height">
+      <%= render partial: "link_button", locals: { launchButtonId: "terminal", launchButton: @launchButtons[:terminal][:view] } if @launchButtons[:terminal][:view][:url] %>
 
-    <%= render partial: "fasse_button" %>
+      <%= render partial: "fasse_button" %>
+    </div>
   </div>
 </div>
 
