--- a/dashboard/app/views/quick_launch/_launch_button.html.erb
+++ b/dashboard/app/views/quick_launch/_launch_button.html.erb
@@ -1,5 +1,6 @@
+<% if launcher_button  %>
 <div class="<%= button_column_classes %>">
-  <div id="<%= launchButtonId %>"
+  <div id="<%= launcher_button_id %>"
        data-toggle="launch-button"
        data-url="<%= ws_sessions_path %>"
        data-reload-url="<%= launchers_sessions_path(r: root_url, format: :js) %>"
@@ -10,13 +11,14 @@
 
     <div class="title text-center">cannon</div>
     <div class="panel-body panel-image">
-      <img src="<%= asset_url launchButton[:logo] %>" alt="Application logo" width="<%= launchButton[:logoWidth] || 200 %>" class="center-block"  style="<%= launchButton[:style] || '' %>"/>
+      <img src="<%= asset_url launcher_button[:logo] %>" alt="Application logo" width="<%= launcher_button[:logoWidth] || 200 %>" class="center-block"  style="<%= launcher_button[:style] || '' %>"/>
     </div>
     <div class="panel-body panel-text">
-      <p><%= launchButton[:p1] || "&nbsp;".html_safe %></p>
-      <p><%= launchButton[:p2] || "&nbsp;".html_safe %></p>
-      <p><%= launchButton[:p3] || "&nbsp;".html_safe %></p>
+      <p><%= launcher_button[:p1] || "&nbsp;".html_safe %></p>
+      <p><%= launcher_button[:p2] || "&nbsp;".html_safe %></p>
+      <p><%= launcher_button[:p3] || "&nbsp;".html_safe %></p>
     </div>
   </div>
 </div>
+<% end %>
 
