--- a/dashboard/application/app/views/quick_launch/_fasse_button.html.erb
+++ b/dashboard/application/app/views/quick_launch/_fasse_button.html.erb
@@ -1,13 +1,14 @@
 <div class="<%= button_column_classes %>">
   <div id="fasse-button" class="launch-button link-button">
-    <a href="#" target="_blank">
-      <div class="title text-center">fas se</div>
-      <div class="link-button-text">
-        Connect to FAS SE to work with Level 3 data
+    <a href="https://fasseood.rc.fas.harvard.edu/" target="_blank">
+      <div class="title text-center title-text">fas se</div>
+      <div class="panel-body panel-image">
+        <p class="link-button-title">Medium Risk</p>
+        <p class="link-button-subtitle">Level 3</p>
       </div>
-      <p>
-        You must be connected to the FASRC VPN
-      </p>
+      <p class="title-text">Connect to FAS SE to work with</p>
+      <p class="title-text">medium risk confidential data</p>
+      <p class="small-text">You must be connected to the FAS RC VPN</p>
     </a>
   </div>
 </div>
