--- a/dashboard/application/app/views/quick_launch/_terminal_button.html.erb
+++ b/dashboard/application/app/views/quick_launch/_terminal_button.html.erb
@@ -1,14 +1,14 @@
 <div class="<%= button_column_classes %>">
   <div class="launch-button">
     <a href="<%= terminal_url %>" target="_blank">
-      <div class="title text-center">cannon</div>
+      <div class="title text-center title-text">cannon</div>
       <div class="panel-body panel-image">
         <img src="<%= asset_url 'term_logo.svg' %>" alt="Application logo" width="125" class="center-block"  style="margin-top: -18px;"/>
       </div>
       <div class="panel-body panel-text">
         <p>&nbsp;</p>
         <p>&nbsp;</p>
-        <p>Open a web based terminal session</p>
+        <p class="title-text">Open a web based terminal session</p>
       </div>
     </a>
   </div>
