DevOpsProjects#391: Updated UI after designer feedback

--- a/dashboard/application/app/views/quick_launch/_fasse_button.html.erb
+++ b/dashboard/application/app/views/quick_launch/_fasse_button.html.erb
@@ -3,12 +3,12 @@
     <a href="https://fasseood.rc.fas.harvard.edu/" target="_blank">
       <div class="title text-center title-text">fas se</div>
       <div class="panel-body panel-image">
-        <p class="link-button-title">Medium Risk</p>
+        <p class="link-button-title">Medium Risk Data</p>
         <p class="link-button-subtitle">Level 3</p>
       </div>
       <p class="title-text">Connect to FAS SE to work with</p>
       <p class="title-text">medium risk confidential data</p>
-      <p class="small-text">You must be connected to the FAS RC VPN</p>
+      <p class="small-text">You must be connected to the FAS SE VPN</p>
     </a>
   </div>
 </div>
