--- a/dashboard/application/app/views/quick_launch/_fasse_button.html.erb
+++ b/dashboard/application/app/views/quick_launch/_fasse_button.html.erb
@@ -4,7 +4,7 @@
       <div class="title text-center title-text">fas se</div>
       <div class="panel-body panel-image">
         <p class="link-button-title">Medium Risk Data</p>
-        <p class="link-button-subtitle">Level 3</p>
+        <p class="link-button-subtitle">Harvard Level 3</p>
       </div>
       <p class="title-text">Connect to FAS SE to work with</p>
       <p class="title-text">medium risk confidential data</p>
