DevOpsProjects#391: Fixed links to connect to VNC client from interactive session panels

--- a/dashboard/application/app/views/layouts/nav/_group.html.erb
+++ b/dashboard/application/app/views/layouts/nav/_group.html.erb
@@ -10,7 +10,7 @@
             <%=
               #LINK TO MAIN DASHBOARD APP INSTEAD OF THIS PASSENGER APP
               link_to(
-                sys_url(link.url.to_s),
+                link.url.to_s,
                 title: link.title,
                 target: link.new_tab? ? "_blank" : nil
               ) do
