--- a/dashboard/application/app/views/quick_launch/index.html.erb
+++ b/dashboard/application/app/views/quick_launch/index.html.erb
@@ -16,12 +16,12 @@
 
   <div data-selector="no-active-sessions" class="ood-appkit markdown app-launcher-help" style="<%= has_active_sessions?(@sessions) ? "display:none" : "" %>">
     <p>To start an interactive session with a default set of resources, click an app icon below.</p>
-    <p>If you need different resources than those listed, <a href="<%= sys_url(batch_connect_sessions_path) %>">create a customized session</a> using the Interactive Apps menu</p>
+    <p>If you need different resources than those listed, <a href="<%= batch_connect_sessions_path %>">create a customized session</a> using the Interactive Apps menu</p>
   </div>
 
   <div data-selector="active-sessions" class="quick-launch-buttons-title" style="<%= has_active_sessions?(@sessions) ? "" : "display:none" %>">
     <h3>Active interactive sessions</h3>
-    <a data-selector="more-sessions" href="<%= sys_url(batch_connect_sessions_path) %>" style="<%= show_more_sessions_link?(@sessions) ? "" : "display:none" %>">
+    <a data-selector="more-sessions" href="<%= batch_connect_sessions_path %>" style="<%= show_more_sessions_link?(@sessions) ? "" : "display:none" %>">
       view all my Interactive sessions <span data-selector="number-of-sessions">(<%= @sessions.length %>)</span>
     </a>
   </div>
@@ -33,7 +33,7 @@
   <div class="quick-launch-buttons-container">
     <div class="quick-launch-buttons-title">
       <h3>Start an interactive app</h3>
-      <a href="<%= sys_url(batch_connect_sessions_path) %>">view all interactive app options</a>
+      <a href="<%= batch_connect_sessions_path %>">view all interactive app options</a>
     </div>
     <div class="row row-eq-height">
       <% @launchers.each do |launcher| %>
