--- a/dashboard/application/app/views/layouts/nav/_sid_menu.html.erb
+++ b/dashboard/application/app/views/layouts/nav/_sid_menu.html.erb
@@ -1,15 +1,10 @@
-<li title="sid about">
-  <a href="http://sid.harvard.edu/about">
-    <i class="fas" aria-hidden="true"></i><span class="hidden-sm hidden-md hidden-md-nav"> About</span>
+<%= render partial: 'layouts/nav/sid_menu_items', locals: { class_value: "sid-nav-md-hidden" } %>
+
+<li class="dropdown sid-nav-md-shown" title="sid documentation">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+    <i class="fas fa-book" aria-hidden="true"></i><span class="hidden-sm hidden-sm-nav"> Docs </span><span class="caret"></span>
   </a>
-</li>
-<li title="sid documentation">
-  <a href="http://sid.harvard.edu/documentation">
-    <i class="fas" aria-hidden="true"></i><span class="hidden-sm hidden-md hidden-md-nav"> Documentation</span>
-  </a>
-</li>
-<li title="sid support">
-  <a href="http://sid.harvard.edu/support">
-    <i class="fas" aria-hidden="true"></i><span class="hidden-sm hidden-md hidden-md-nav"> Support</span>
-  </a>
+  <ul class="dropdown-menu">
+    <%= render partial: 'layouts/nav/sid_menu_items', locals: { class_value: "" } %>
+  </ul>
 </li>
