--- a/dashboard/application/app/views/quick_launch/_fasse_button.html.erb
+++ b/dashboard/application/app/views/quick_launch/_fasse_button.html.erb
@@ -1,14 +1,13 @@
 <div class="<%= button_column_classes %>">
   <div id="fasse-button" class="launch-button link-button">
     <a href="https://fasseood.rc.fas.harvard.edu/" target="_blank">
-      <div class="title text-center title-text">fas se</div>
-      <div class="panel-body panel-image">
+      <div class="panel-body fasse-title">
         <p class="link-button-title">Medium Risk Data</p>
         <p class="link-button-subtitle">Harvard Level 3</p>
       </div>
-      <p class="title-text">Connect to FAS SE to work with</p>
-      <p class="title-text">medium risk confidential data</p>
-      <p class="small-text">You must be connected to the FAS SE VPN</p>
+      <p class="title-text">Connect to FAS SE</p>
+      <p class="small-text">Medium risk confidential data</p>
+      <p class="small-text">FAS SE cluster</p>
     </a>
   </div>
 </div>
