--- a/dashboard/application/app/views/quick_launch/index.html.erb
+++ b/dashboard/application/app/views/quick_launch/index.html.erb
@@ -46,6 +46,7 @@
     </div>
     <div class="row row-eq-height">
       <%= render partial: "terminal_button" %>
+      <%= render partial: "all_button" %>
       <%= render partial: "fasse_button" %>
     </div>
   </div>
