--- a/dashboard/application/app/views/quick_launch/_launch_button.html.erb
+++ b/dashboard/application/app/views/quick_launch/_launch_button.html.erb
@@ -9,7 +9,6 @@
       <div class="spinner-border" role="status"></div>
     </div>
 
-    <div class="title text-center title-text">cannon</div>
     <div class="panel-body panel-image">
       <img src="<%= asset_url launcher_button[:logo] %>" alt="Application logo" width="<%= launcher_button[:logoWidth] || 200 %>" class="center-block"  style="<%= launcher_button[:style] || '' %>"/>
     </div>
@@ -17,6 +16,7 @@
       <p class="title-text"><%= launcher_button[:p1] || "&nbsp;".html_safe %></p>
       <p class="small-text"><%= launcher_button[:p2] || "&nbsp;".html_safe %></p>
       <p class="small-text"><%= launcher_button[:p3] || "&nbsp;".html_safe %></p>
+      <p class="small-text">CANNON cluster</p>
     </div>
   </div>
 </div>
