--- a/dashboard/application/app/views/quick_launch/_all_button.html.erb
+++ b/dashboard/application/app/views/quick_launch/_all_button.html.erb
@@ -1,6 +1,6 @@
 <div class="<%= button_column_classes %>">
   <div class="launch-button secondary-button">
-    <a href="<%= batch_connect_sessions_path %>" target="_blank">
+    <a href="<%= batch_connect_sessions_path %>">
       <div class="panel-body all-image">
         <i class="fa fa-plus" aria-hidden="true"></i><span class="title-text">All apps</span>
       </div>
