--- a/dashboard/application/app/views/quick_launch/_help.html.erb
+++ b/dashboard/application/app/views/quick_launch/_help.html.erb
@@ -1,6 +1,5 @@
-<hr />
-
-<div id="help-container" class="ood-appkit markdown">
+<div id="help-container">
+  <div class="container content help-content ood-appkit markdown">
   <h2>Welcome to Sid, the Social Sciences Dashboard for the FAS Research Computing Cluster.</h2>
 
   <p>
@@ -54,4 +53,5 @@
   <p>
     You can find information on our <a href="https://www.rc.fas.harvard.edu/maintenance" target="_blank">monthly planned maintenance window at this page.</a>
   </p>
+  </div>
 </div>
