--- a/dashboard/application/app/views/quick_launch/_all_button.html.erb
+++ b/dashboard/application/app/views/quick_launch/_all_button.html.erb
@@ -2,7 +2,8 @@
   <div class="launch-button secondary-button">
     <a href="<%= batch_connect_sessions_path %>">
       <div class="panel-body all-image">
-        <i class="fa fa-plus" aria-hidden="true"></i><span class="title-text">All apps</span>
+        <span class="title-text">All apps</span>
+        <span class="arrow" aria-hidden="true"><i aria-hidden="true"></i></span>
       </div>
       <div class="panel-body panel-text">
         <p class="title-text">View all interactive apps</p>
