Added GitHub actions for CI

--- a/dashboard/application/app/views/quick_launch/_docs.html.erb
+++ b/dashboard/application/app/views/quick_launch/_docs.html.erb
@@ -52,7 +52,9 @@
         </p>
 
         <% @announcements.select(&:valid?).each do |announcement| %>
+          <div class="announcement">
             <%= raw OodAppkit.markdown.render(announcement.msg) %>
+          </div>
         <% end %>
       </section>
     </div>
