DevOpsProjects#437: Replaced Cluster navigation item for Terminals

--- a/dashboard/application/app/assets/stylesheets/navbar.scss
+++ b/dashboard/application/app/assets/stylesheets/navbar.scss
@@ -11,6 +11,10 @@
 // make navbar the grey default color
 // changed from the red color we use for branding
 
+.navbar .app-icon {
+  margin-right: 5px;
+}
+
 //FIXES TO COLOR IN NAVIGATION
 .navbar-inverse {
   .navbar-nav .open .dropdown-menu > li > a {
