--- a/dashboard/application/app/views/layouts/nav/_group.html.erb
+++ b/dashboard/application/app/views/layouts/nav/_group.html.erb
@@ -1,5 +1,5 @@
 <li class="dropdown" title="<%= group.title %>" >
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= group.title %><span class="caret"></span></a>
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= map_nav_item(group.title) %><span class="caret"></span></a>
   <ul class="dropdown-menu">
     <% OodAppGroup.groups_for(apps: group.apps, group_by: :subcategory).each_with_index do |g, index| %>
       <%= content_tag "li", "", class: "divider", role: "separator" if index > 0 %>
@@ -8,14 +8,13 @@
         <% app.links.each do |link| %>
           <li>
             <%=
-              #LINK TO MAIN DASHBOARD APP INSTEAD OF THIS PASSENGER APP
               link_to(
                 link.url.to_s,
-                title: link.title,
+                title: map_nav_item(link.title),
                 target: link.new_tab? ? "_blank" : nil
               ) do
             %>
-              <%= icon_tag(link.icon_uri) %> <%=link.title %>
+              <%= icon_tag(link.icon_uri) %> <%= map_nav_item(link.title) %>
               <% if link.subtitle.present? %>
                 <%= content_tag(:small, link.subtitle, style: "text-indent: 20px", class: 'visible-xs-block visible-sm-inline visible-md-inline visible-lg-inline') %>
               <% end %>
