DevOpsProjects#472: Added google tag manager to Sid Dashboard application

--- a/dashboard/application/app/views/layouts/application.html.erb
+++ b/dashboard/application/app/views/layouts/application.html.erb
@@ -14,7 +14,10 @@
   <% if Configuration.turbolinks_enabled? %>
     <meta name="turbolinks-root" content="<%= ENV['RAILS_RELATIVE_URL_ROOT'] || "/" %>">
   <% end %>
-<%= render partial: '/layouts/nav/styles', locals: { bg_color: Configuration.brand_bg_color, link_active_color: Configuration.brand_link_active_bg_color } %>
+
+  <%= render partial: '/layouts/nav/styles', locals: { bg_color: Configuration.brand_bg_color, link_active_color: Configuration.brand_link_active_bg_color } %>
+
+  <%= render partial: 'layouts/google_analytics' %>
 </head>
 <body>
   <header <%= 'data-turbolinks-permanent' if Configuration.turbolinks_enabled? %>>
