--- a/dashboard/application/app/views/widgets/_fasse_button.html.erb
+++ b/dashboard/application/app/views/widgets/_fasse_button.html.erb
@@ -1,6 +1,6 @@
 <div class="<%= button_column_classes %>">
   <div id="fasse-button" class="launch-button link-button">
-    <a href="https://fasseood.rc.fas.harvard.edu/" target="_blank">
+    <a class="ga-quick-link" href="https://fasseood.rc.fas.harvard.edu/" target="_blank">
       <div class="panel-body fasse-title">
         <p class="link-button-title">Medium Risk Data</p>
         <p class="link-button-subtitle">Harvard Level 3</p>
