--- a/dashboard/application/app/views/widgets/_terminal_button.html.erb
+++ b/dashboard/application/app/views/widgets/_terminal_button.html.erb
@@ -1,6 +1,6 @@
 <div class="<%= button_column_classes %>">
   <div class="launch-button secondary-button">
-    <a href="<%= terminal_url %>" target="_blank">
+    <a class="ga-quick-link" href="<%= terminal_url %>" target="_blank">
       <div class="panel-body terminal-image">
         <img src="<%= asset_url 'term_logo.svg' %>" alt="Application logo" width="125" class="center-block"  style="margin-top: 5x;"/>
       </div>
